// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createVegaSpec > Bar Chart > should create a horizontal bar chart 1`] = `
{
  "$schema": "https://vega.github.io/schema/vega-lite/v5.json",
  "background": "white",
  "data": {
    "values": [
      {
        "category": "A",
        "group": "Group 1",
        "value": 10,
      },
      {
        "category": "B",
        "group": "Group 1",
        "value": 20,
      },
      {
        "category": "C",
        "group": "Group 1",
        "value": 15,
      },
      {
        "category": "A",
        "group": "Group 2",
        "value": 5,
      },
      {
        "category": "B",
        "group": "Group 2",
        "value": 10,
      },
      {
        "category": "C",
        "group": "Group 2",
        "value": 25,
      },
    ],
  },
  "encoding": {
    "x": {
      "field": "value",
      "title": "value",
      "type": "nominal",
    },
    "y": {
      "field": "category",
      "title": "category",
      "type": "nominal",
    },
  },
  "height": 300,
  "mark": {
    "type": "bar",
  },
  "title": "Test Chart",
  "width": 400,
}
`;

exports[`createVegaSpec > Bar Chart > should create a stacked bar chart with grouping 1`] = `
{
  "$schema": "https://vega.github.io/schema/vega-lite/v5.json",
  "background": "white",
  "data": {
    "values": [
      {
        "category": "A",
        "group": "Group 1",
        "value": 10,
      },
      {
        "category": "B",
        "group": "Group 1",
        "value": 20,
      },
      {
        "category": "C",
        "group": "Group 1",
        "value": 15,
      },
      {
        "category": "A",
        "group": "Group 2",
        "value": 5,
      },
      {
        "category": "B",
        "group": "Group 2",
        "value": 10,
      },
      {
        "category": "C",
        "group": "Group 2",
        "value": 25,
      },
    ],
  },
  "encoding": {
    "color": {
      "field": "group",
      "scale": {},
      "type": "nominal",
    },
    "x": {
      "field": "category",
      "title": "category",
      "type": "nominal",
    },
    "y": {
      "field": "value",
      "stack": true,
      "title": "value",
      "type": "nominal",
    },
  },
  "height": 300,
  "mark": {
    "type": "bar",
  },
  "title": "Test Chart",
  "width": 400,
}
`;

exports[`createVegaSpec > Edge cases > should handle NONE_GROUP_BY for groupByColumn 1`] = `
{
  "$schema": "https://vega.github.io/schema/vega-lite/v5.json",
  "background": "white",
  "data": {
    "values": [
      {
        "category": "A",
        "group": "Group 1",
        "value": 10,
      },
      {
        "category": "B",
        "group": "Group 1",
        "value": 20,
      },
      {
        "category": "C",
        "group": "Group 1",
        "value": 15,
      },
      {
        "category": "A",
        "group": "Group 2",
        "value": 5,
      },
      {
        "category": "B",
        "group": "Group 2",
        "value": 10,
      },
      {
        "category": "C",
        "group": "Group 2",
        "value": 25,
      },
    ],
  },
  "encoding": {
    "color": {
      "field": "None",
      "scale": {},
      "type": "nominal",
    },
    "x": {
      "field": "category",
      "title": "category",
      "type": "nominal",
    },
    "y": {
      "field": "value",
      "stack": true,
      "title": "value",
      "type": "nominal",
    },
  },
  "height": 300,
  "mark": {
    "type": "bar",
  },
  "title": "Test Chart",
  "width": 400,
}
`;

exports[`createVegaSpec > Edge cases > should handle missing xColumn field 1`] = `"X-axis column is required"`;

exports[`createVegaSpec > Edge cases > should handle missing yColumn field 1`] = `"Y-axis column is required"`;

exports[`createVegaSpec > Line Chart > should create a basic line chart spec 1`] = `
{
  "$schema": "https://vega.github.io/schema/vega-lite/v5.json",
  "background": "white",
  "data": {
    "values": [
      {
        "category": "A",
        "group": "Group 1",
        "value": 10,
      },
      {
        "category": "B",
        "group": "Group 1",
        "value": 20,
      },
      {
        "category": "C",
        "group": "Group 1",
        "value": 15,
      },
      {
        "category": "A",
        "group": "Group 2",
        "value": 5,
      },
      {
        "category": "B",
        "group": "Group 2",
        "value": 10,
      },
      {
        "category": "C",
        "group": "Group 2",
        "value": 25,
      },
    ],
  },
  "encoding": {
    "x": {
      "field": "category",
      "title": "category",
      "type": "nominal",
    },
    "y": {
      "field": "value",
      "title": "value",
      "type": "nominal",
    },
  },
  "height": 300,
  "mark": {
    "type": "line",
  },
  "title": "Test Chart",
  "width": 400,
}
`;

exports[`createVegaSpec > Pie Chart > should create a pie chart with tooltips 1`] = `"Color by column is required"`;

exports[`createVegaSpec > Scatter Chart > should create a scatter chart with grouping 1`] = `
{
  "$schema": "https://vega.github.io/schema/vega-lite/v5.json",
  "background": "white",
  "data": {
    "values": [
      {
        "category": "A",
        "group": "Group 1",
        "value": 10,
      },
      {
        "category": "B",
        "group": "Group 1",
        "value": 20,
      },
      {
        "category": "C",
        "group": "Group 1",
        "value": 15,
      },
      {
        "category": "A",
        "group": "Group 2",
        "value": 5,
      },
      {
        "category": "B",
        "group": "Group 2",
        "value": 10,
      },
      {
        "category": "C",
        "group": "Group 2",
        "value": 25,
      },
    ],
  },
  "encoding": {
    "color": {
      "field": "group",
      "scale": {},
      "type": "nominal",
    },
    "x": {
      "field": "category",
      "title": "category",
      "type": "nominal",
    },
    "y": {
      "field": "value",
      "title": "value",
      "type": "nominal",
    },
  },
  "height": 300,
  "mark": {
    "type": "point",
  },
  "title": "Test Chart",
  "width": 400,
}
`;

exports[`createVegaSpec > Theme variations > should create a chart with dark theme 1`] = `
{
  "$schema": "https://vega.github.io/schema/vega-lite/v5.json",
  "background": "dark",
  "data": {
    "values": [
      {
        "category": "A",
        "group": "Group 1",
        "value": 10,
      },
      {
        "category": "B",
        "group": "Group 1",
        "value": 20,
      },
      {
        "category": "C",
        "group": "Group 1",
        "value": 15,
      },
      {
        "category": "A",
        "group": "Group 2",
        "value": 5,
      },
      {
        "category": "B",
        "group": "Group 2",
        "value": 10,
      },
      {
        "category": "C",
        "group": "Group 2",
        "value": 25,
      },
    ],
  },
  "encoding": {
    "x": {
      "field": "category",
      "title": "category",
      "type": "nominal",
    },
    "y": {
      "field": "value",
      "title": "value",
      "type": "nominal",
    },
  },
  "height": 300,
  "mark": {
    "type": "bar",
  },
  "title": "Test Chart",
  "width": 400,
}
`;

exports[`createVegaSpec > should create a bar chart with binning 1`] = `
{
  "$schema": "https://vega.github.io/schema/vega-lite/v5.json",
  "background": "white",
  "data": {
    "values": [
      {
        "category": "A",
        "group": "Group 1",
        "value": 10,
      },
      {
        "category": "B",
        "group": "Group 1",
        "value": 20,
      },
      {
        "category": "C",
        "group": "Group 1",
        "value": 15,
      },
      {
        "category": "A",
        "group": "Group 2",
        "value": 5,
      },
      {
        "category": "B",
        "group": "Group 2",
        "value": 10,
      },
      {
        "category": "C",
        "group": "Group 2",
        "value": 25,
      },
    ],
  },
  "encoding": {
    "x": {
      "bin": true,
      "field": "category",
      "title": "category",
      "type": "nominal",
    },
    "y": {
      "field": "value",
      "title": "value",
      "type": "nominal",
    },
  },
  "height": 300,
  "mark": {
    "type": "bar",
  },
  "title": "Test Chart",
  "width": 400,
}
`;
